# OrchestraDiscordBot

./: .gitmodules  CMakeLists.txt  README.md
Resources/: CommandsDescriptions.cfg  CommandsNames.cfg  Main.cfg  Resources.txt  config.txt  main.cfg  resources.rc
Source/: Utils.hpp  main.cpp
Source/DiscordBot/: Command.cpp  Command.hpp  DiscordBot.cpp  DiscordBot.hpp  FuckingSlaveDiscordBot.cpp  FuckingSlaveDiscordBot.hpp  OrchestraDiscordBot.cpp  OrchestraDiscordBot.hpp  OrchestraDiscordBotCommands.cpp  OrchestraDiscordBotInstance.cpp  OrchestraDiscordBotInstance.hpp  Player.cpp  Player.hpp  TracksQueue.cpp  TracksQueue.hpp  Yt_DlpManager.cpp  Yt_DlpManager.hpp
Source/FFmpeg/: Decoder.cpp  Decoder.hpp  FFmpegUniquePtrManager.cpp  FFmpegUniquePtrManager.hpp
Source/Workers/: Worker.hpp  WorkersManager.hpp
